added the new updates

--- a/logistics.html
+++ b/logistics.html
@@ -54,22 +54,22 @@
             <nav class="primary-navigation" id="primary-navigation">
                 <ul aria-label="Primary" role="list" class="nav-list">
                     <img class="icon-close" src="public/images/icon-close.svg" alt="" aria-hidden="true">
-                    <li><a href="oil-and-gas.html" class="nav-link">Oil and Gas</a></li>
+                    <li><a href="oil-and-gas.html" class="nav-link" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#060454'" onmouseout="this.style.color='#293037'">Oil and Gas</a></li>
                     <div class="text-underline">
-                        <li><a href="logistics.html" class="nav-link current">
+                        <li><a href="logistics.html" class="nav-link current" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#060454'" onmouseout="this.style.color='#293037'">
                                 <p>Marine Logisitics</p>
                                 <div class="underline" style="background: #060454; width: 120px;"></div>
                             </a>
                         </li>
                     </div>
-                    <li><a href="renewable-energy.html" class="nav-link">Renewable Energy</a></li>
+                    <li><a href="renewable-energy.html" class="nav-link" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#060454'" onmouseout="this.style.color='#293037'">Renewable Energy</a></li>
                     <li><a href="#otherservices" class="nav-link-b | is-small-screen">Our Services</a></li>
                     <li><a href="contact-us-page.html" class="nav-link-b | is-small-screen">Contact us</a></li>
                 </ul>
             </nav>
             <div class="services-nav">
                 <p class="our-services">
-                    <a href="#otherservices" class="nav-link" style="text-decoration: none; color: #293037;"> Our Services </a>
+                    <a href="#otherservices" class="nav-link" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#060454'" onmouseout="this.style.color='#293037'"> Our Services </a>
                 </p>
                 <p class="contact-link"><a href="contact-us-page.html">Contact us</a></p>
                 <button class="oil-and-gas-button" style="background: #060454;">
@@ -314,14 +314,14 @@
                         <div class="renewable-energy-image">
                             <a href="renewable-energy.html" class="page-link">
                                 <div class="renewable-energy-image-text">
-                                    <p class="renewable-energy-image-text">Renewable Energy</p>
+                                    <p class="renewable-energy-image-text" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#293037'" onmouseout="this.style.color='#FFFFFF'">Renewable Energy</p>
                                 </div>
                             </a>
                         </div>
                         <div class="real-estate-image">
-                            <a href="#" class="page-link">
+                            <a href="https://www.adeppo-properties.com/" class="page-link">
                                 <div class="real-estate-image-text">
-                                    <p class="real-estate-image-text">Real Estate</p>
+                                    <p class="real-estate-image-text" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#293037'" onmouseout="this.style.color='#FFFFFF'">Real Estate</p>
                                 </div>
                             </a>
                         </div>
