--- a/oil-and-gas.html
+++ b/oil-and-gas.html
@@ -57,19 +57,19 @@
                 <ul aria-label="Primary" role="list" class="nav-list">
                     <img class="icon-close" src="public/images/icon-close.svg" alt="" aria-hidden="true">
                     <div class="text-underline">
-                        <li><a href="oil-and-gas.html" class="nav-link current">
+                        <li><a href="oil-and-gas.html" class="nav-link current" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#774E26'" onmouseout="this.style.color='#293037'">
                                 <p>Oil and Gas</p>
                                 <div class="underline" style="background: #774E26; width: 81px;"></div>
                             </a></li>
                     </div>
-                    <li><a href="logistics.html" class="nav-link">Marine Logistics</a></li>
-                    <li><a href="renewable-energy.html" class="nav-link">Renewable Energy</a></li>
+                    <li><a href="logistics.html" class="nav-link" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#774E26'" onmouseout="this.style.color='#293037'">Marine Logistics</a></li>
+                    <li><a href="renewable-energy.html" class="nav-link" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#774E26'" onmouseout="this.style.color='#293037'">Renewable Energy</a></li>
                     <li><a href="#otherservices" class="nav-link-b | is-small-screen">Our Services</a></li>
                     <li><a href="contact-us-page.html" class="nav-link-b | is-small-screen">Contact us</a></li>
             </nav>
             <div class="services-nav">
                 <p class="our-services">
-                   <a href="#otherservices" class="nav-link" style="text-decoration: none; color: #293037;"> Our Services </a>
+                   <a href="#otherservices" class="nav-link" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#774E26'" onmouseout="this.style.color='#293037'"> Our Services </a>
                 </p>
                 <p class="contact-link"><a href="contact-us-page.html">Contact us</a></p>
                 <button class="oil-and-gas-button" style="background: #774E26">
@@ -94,12 +94,12 @@
                         Oil and Gas Consulting
                     </p>
                     <p class="oil-and-gas-banner-text-body-big" id="linebreak">
-                        Accelerating<br/> oil production ease-on the go
+                        Accelerating<br/> oil production ease on the go
                     </p>
                 </div>
                 <div class="banner-column">
                     <p class="oil-and-gas-banner-text-body" id="linebreak">
-                        Accelerating oil <br/> production <br /> ease-on <br /> the go
+                        Accelerating oil <br/> production <br /> ease on <br /> the go
                     </p>
                     <div class="banner-image-column">
                         <img src="public/images/banner-image1.png" alt="banner-image-oil-and-gas-rig" class="banner-image">
@@ -166,6 +166,12 @@
                                         <img src="public/images/check.png" , alt="check">
                                     </div>
                                     <p class="list-text">Onshore Pipeline and Storage Facility Maintenance Services</p>
+                                </li>
+                                <li class="check-box-list">
+                                    <div class="check-box">
+                                        <img src="public/images/check.png" , alt="check">
+                                    </div>
+                                    <p class="list-text">Downstream and Product Refining Advisory</p>
                                 </li>
                             </ul>
                         </div>
