--- a/renewable-energy.html
+++ b/renewable-energy.html
@@ -56,9 +56,9 @@
             <nav class="primary-navigation" id="primary-navigation">
                 <ul aria-label="Primary" role="list" class="nav-list">
                     <img class="icon-close" src="public/images/icon-close.svg" alt="" aria-hidden="true">
-                    <li><a href="oil-and-gas.html" class="nav-link">Oil and Gas</a></li>
-                    <li><a href="logistics.html" class="nav-link">Marine Logistics</a></li>
-                    <div class="text-underline"><li><a href="renewable-energy.html" class="nav-link current"><p>Renewable Energy</p>
+                    <li><a href="oil-and-gas.html" class="nav-link" style="text-decoration: none;">Oil and Gas</a></li>
+                    <li><a href="logistics.html" class="nav-link" style="text-decoration: none;">Marine Logistics</a></li>
+                    <div class="text-underline"><li><a href="renewable-energy.html" class="nav-link current" style="text-decoration: none;"><p>Renewable Energy</p>
                         <div class="underline" style="background: #FF6D00; width: 131px;"></div>
                         </a></li>
                     </div>
@@ -68,7 +68,7 @@
             </nav>
             <div class="services-nav">
                 <p class="our-services">
-                    <a href="#otherservices" class="nav-link" style="text-decoration: none; color: #293037;"> Our Services </a>
+                    <a href="#otherservices" class="nav-link" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#FF6D00'" onmouseout="this.style.color='#293037'"> Our Services </a>
                 </p>
                 <p class="contact-link"><a href="contact-us-page.html">Contact us</a></p>
                 <button class="oil-and-gas-button" style="background: #FF6D00;">
@@ -225,17 +225,17 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="renewable-energy-image">
-                                <a href="renewable-energy.html" class="page-link">
+                            <div class="marine-logistics-image">
+                                <a href="logistics.html" class="page-link">
                                     <div class="renewable-energy-image-text">
-                                        <p class="renewable-energy-image-text">Renewable Energy</p>
+                                        <p class="renewable-energy-image-text" style="transition: color 0.3s ease;" onmouseover="this.style.color='#FF6D00'" onmouseout="this.style.color='#FFFFFF'">Marine Logisitics</p>
                                     </div>
                                 </a>
                             </div>
                             <div class="real-estate-image">
-                                <a href="#" class="normal-link">
+                                <a href="https://www.adeppo-properties.com/" class="normal-link">
                                     <div class="real-estate-image-text">
-                                        <p class="real-estate-image-text">Real Estate</p>
+                                        <p class="real-estate-image-text" style="transition: color 0.3s ease;" onmouseover="this.style.color='#FF6D00'" onmouseout="this.style.color='#FFFFFF'">Real Estate</p>
                                     </div>
                                 </a>
                             </div>
