--- a/logistics.html
+++ b/logistics.html
@@ -314,14 +314,14 @@
                         <div class="renewable-energy-image">
                             <a href="renewable-energy.html" class="page-link">
                                 <div class="renewable-energy-image-text">
-                                    <p class="renewable-energy-image-text" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#293037'" onmouseout="this.style.color='#FFFFFF'">Renewable Energy</p>
+                                    <p class="renewable-energy-image-text" style="transition: color 0.3s ease;" onmouseover="this.style.color='#060454'" onmouseout="this.style.color='#FFFFFF'">Renewable Energy</p>
                                 </div>
                             </a>
                         </div>
                         <div class="real-estate-image">
-                            <a href="https://www.adeppo-properties.com/" class="page-link">
+                            <a href="https://www.adeppo-properties.com/" class="normal-link">
                                 <div class="real-estate-image-text">
-                                    <p class="real-estate-image-text" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#293037'" onmouseout="this.style.color='#FFFFFF'">Real Estate</p>
+                                    <p class="real-estate-image-text" style="transition: color 0.3s ease;" onmouseover="this.style.color='#060454'" onmouseout="this.style.color='#FFFFFF'">Real Estate</p>
                                 </div>
                             </a>
                         </div>
