--- a/oil-and-gas.html
+++ b/oil-and-gas.html
@@ -339,14 +339,18 @@
                             </a>
                         </div>
                         <div class="renewable-energy-image">
-                            <div class="renewable-energy-image-text">
-                                <p class="renewable-energy-image-text">Renewable Energy</p>
-                            </div>
+                            <a href="renewable-energy.html" class="page-link">
+                                <div class="renewable-energy-image-text">
+                                    <p class="renewable-energy-image-text" style="transition: color 0.3s ease;" onmouseover="this.style.color='#FDBB81'" onmouseout="this.style.color='#FFFFFF'">Renewable Energy</p>
+                                </div>
+                            </a>
                         </div>
                         <div class="real-estate-image">
-                            <div class="real-estate-image-text">
-                                <p class="real-estate-image-text">Real Estate</p>
-                            </div>
+                            <a href="https://www.adeppo-properties.com/" class="normal-link">
+                                <div class="real-estate-image-text">
+                                    <p class="real-estate-image-text" style="transition: color 0.3s ease;" onmouseover="this.style.color='#FDBB81'" onmouseout="this.style.color='#FFFFFF'">Real Estate</p>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
