--- a/oil-and-gas.html
+++ b/oil-and-gas.html
@@ -57,12 +57,12 @@
                 <ul aria-label="Primary" role="list" class="nav-list">
                     <img class="icon-close" src="public/images/icon-close.svg" alt="" aria-hidden="true">
                     <div class="text-underline">
-                        <li><a href="oil-and-gas.html" class="nav-link current" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#774E26'" onmouseout="this.style.color='#293037'">
+                        <li><a href="oil-and-gas.html" class="nav-link current" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#FF6D00'" onmouseout="this.style.color='#293037'">
                                 <p>Oil and Gas</p>
                                 <div class="underline" style="background: #774E26; width: 81px;"></div>
                             </a></li>
                     </div>
-                    <li><a href="logistics.html" class="nav-link" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#774E26'" onmouseout="this.style.color='#293037'">Marine Logistics</a></li>
+                    <li><a href="logistics.html" class="nav-link" style="        text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#774E26'" onmouseout="this.style.color='#293037'">Marine Logistics</a></li>
                     <li><a href="renewable-energy.html" class="nav-link" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#774E26'" onmouseout="this.style.color='#293037'">Renewable Energy</a></li>
                     <li><a href="#otherservices" class="nav-link-b | is-small-screen">Our Services</a></li>
                     <li><a href="contact-us-page.html" class="nav-link-b | is-small-screen">Contact us</a></li>
