--- a/logistics.html
+++ b/logistics.html
@@ -54,15 +54,27 @@
             <nav class="primary-navigation" id="primary-navigation">
                 <ul aria-label="Primary" role="list" class="nav-list">
                     <img class="icon-close" src="public/images/icon-close.svg" alt="" aria-hidden="true">
-                    <li><a href="oil-and-gas.html" class="nav-link" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#060454'" onmouseout="this.style.color='#293037'">Oil and Gas</a></li>
+                    <li><a href="oil-and-gas.html" class="nav-link" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="hoverLink(this)" onmouseout="unhoverLink(this)">
+                            <p>
+                                Oil and Gas
+                            </p>
+                            <div class="underline" style="width: 81px;"></div>
+                        </a>
+                    </li>
                     <div class="text-underline">
-                        <li><a href="logistics.html" class="nav-link current" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#060454'" onmouseout="this.style.color='#293037'">
+                        <li><a href="logistics.html" class="nav-link current" style="text-decoration: none; color: #060454; transition: color 0.3s ease;" onmouseover="hoverLink(this)" onmouseout="unhoverLink(this)">
                                 <p>Marine Logisitics</p>
-                                <div class="underline" style="background: #060454; width: 120px;"></div>
+                                <div class="underline" style="background-color: #060454; width: 120px;"></div>
                             </a>
                         </li>
                     </div>
-                    <li><a href="renewable-energy.html" class="nav-link" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#060454'" onmouseout="this.style.color='#293037'">Renewable Energy</a></li>
+                    <li><a href="renewable-energy.html" class="nav-link" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="hoverLink(this)" onmouseout="unhoverLink(this)">
+                            <p>
+                                Renewable Energy
+                            </p>
+                             <div class="underline" style="width: 130px;"></div>
+                        </a>
+                    </li>
                     <li><a href="#otherservices" class="nav-link-b | is-small-screen">Our Services</a></li>
                     <li><a href="contact-us-page.html" class="nav-link-b | is-small-screen">Contact us</a></li>
                 </ul>
@@ -616,6 +628,52 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="main.js" type="module"></script>
+    <script>
+        function hoverLink(element) {
+            // Change the text color of the hovered link
+            element.style.color = '#060454';
+
+            // Find the underline element within the hovered link
+            var underline = element.querySelector('.underline');
+
+            if (element.textContent.includes('Oil and Gas')) {
+                var marineLogistics = document.querySelector('.nav-link.current');
+                marineLogistics.style.color = "#293037"
+                underline.style.width = '81px';
+                underline.style.background = '#060454';
+            } else if (element.textContent.includes('Renewable Energy')) {
+                var marineLogistics = document.querySelector('.nav-link.current');
+                marineLogistics.style.color = "#293037"
+                underline.style.width = '130px';
+                underline.style.background = '#060454';
+            }
+            // Disable underlines for other links except the hovered link
+            var otherLinks = document.querySelectorAll('.nav-link');
+            otherLinks.forEach(function (link) {
+                if (link !== element) {
+                    var otherUnderline = link.querySelector('.underline');
+                    otherUnderline.style.width = '0';
+                }
+            });
+        }
+
+
+        function unhoverLink(element) {
+            // Reset the text color of the link when the mouse moves away
+            element.style.color = '#293037';
+
+            // Find the underline element within the link
+            var underline = element.querySelector('.underline');
+
+            // Reset the underline width to 0 for the link
+            underline.style.width = '0';
+
+            // Enable underline for marine logistics when not hovering over any link
+            var oilAndGasLink = document.querySelector('.nav-link.current');
+            var oilAndGasUnderline = oilAndGasLink.querySelector('.underline');
+            oilAndGasUnderline.style.width = '115px';
+        }
+    </script>
 </body>
 
 </html>
