--- a/oil-and-gas.html
+++ b/oil-and-gas.html
@@ -75,12 +75,12 @@
                         </P>
                         <div class="underline" style="width: 130px;"></div>
                     </a></li>                    
-                    <li><a href="#otherservices" class="nav-link-b | is-small-screen">Our Services</a></li>
+                    <li><a href="#otherservices" class="nav-link-b | is-small-screen" style="color: #774E26;">Our Services</a></li>
                     <li><a href="contact-us-page.html" class="nav-link-b | is-small-screen">Contact us</a></li>
             </nav>
             <div class="services-nav">
                 <p class="our-services">
-                   <a href="#otherservices" class="nav-link" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#774E26'" onmouseout="this.style.color='#293037'"> Our Services </a>
+                   <a href="#otherservices" class="nav-link" style="text-decoration: none; color: #774E26;"> Our Services </a>
                 </p>
                 <p class="contact-link"><a href="contact-us-page.html">Contact us</a></p>
                 <button class="oil-and-gas-button" style="background: #774E26">
@@ -649,22 +649,22 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script>
             function hoverLink(element) {
-                // Change the text color of the hovered link
-                element.style.color = '#774E26';
 
                 // Find the underline element within the hovered link
                 var underline = element.querySelector('.underline');
 
                 if (element.textContent.includes('Marine Logistics')) {
                     var oilAndGasLink = document.querySelector('.nav-link.current');
-                    oilAndGasLink.style.color = "#293037"
+                    oilAndGasLink.style.color = "#293037";
+                    element.style.color = '#060454';
                     underline.style.width = '115px';
-                    underline.style.background = '#774E26';
+                    underline.style.background = '#060454';
                 } else if (element.textContent.includes('Renewable Energy')) {
                     var oilAndGasLink = document.querySelector('.nav-link.current');
-                    oilAndGasLink.style.color = "#293037"
+                    oilAndGasLink.style.color = "#293037";
+                    element.style.color = '#FF6D00'
                     underline.style.width = '130px';
-                    underline.style.background = '#774E26';
+                    underline.style.background = '#FF6D00';
                 }
                 // Disable underlines for other links except the hovered link
                 var otherLinks = document.querySelectorAll('.nav-link');
@@ -690,6 +690,7 @@
                 // Enable underline for Oil and Gas when not hovering over any link
                 var oilAndGasLink = document.querySelector('.nav-link.current');
                 var oilAndGasUnderline = oilAndGasLink.querySelector('.underline');
+                oilAndGasLink.style.color = '#774E26';
                 oilAndGasUnderline.style.width = '81px';
             }
 
