--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       transition: background-image 0.2s ease-in-out;
       overflow-y: hidden;
       background-position: center;
-      max-height: 100vh;
+      max-height: 100vh;`
     }
 
   </style>
