--- a/logistics.html
+++ b/logistics.html
@@ -75,13 +75,13 @@
                              <div class="underline" style="width: 130px;"></div>
                         </a>
                     </li>
-                    <li><a href="#otherservices" class="nav-link-b | is-small-screen">Our Services</a></li>
+                    <li><a href="#otherservices" class="nav-link-b | is-small-screen" style="color: #060454;">Our Services</a></li>
                     <li><a href="contact-us-page.html" class="nav-link-b | is-small-screen">Contact us</a></li>
                 </ul>
             </nav>
             <div class="services-nav">
                 <p class="our-services">
-                    <a href="#otherservices" class="nav-link" style="text-decoration: none; color: #293037; transition: color 0.3s ease;" onmouseover="this.style.color='#060454'" onmouseout="this.style.color='#293037'"> Our Services </a>
+                    <a href="#otherservices" class="nav-link" style="text-decoration: none; color: #060454; transition: color 0.3s ease;"> Our Services </a>
                 </p>
                 <p class="contact-link"><a href="contact-us-page.html">Contact us</a></p>
                 <button class="oil-and-gas-button" style="background: #060454;">
@@ -630,22 +630,21 @@
     <script src="main.js" type="module"></script>
     <script>
         function hoverLink(element) {
-            // Change the text color of the hovered link
-            element.style.color = '#060454';
-
             // Find the underline element within the hovered link
             var underline = element.querySelector('.underline');
 
             if (element.textContent.includes('Oil and Gas')) {
                 var marineLogistics = document.querySelector('.nav-link.current');
-                marineLogistics.style.color = "#293037"
+                marineLogistics.style.color = "#293037";
+                element.style.color = '#774E26'
                 underline.style.width = '81px';
-                underline.style.background = '#060454';
+                underline.style.background = '#774E26';
             } else if (element.textContent.includes('Renewable Energy')) {
                 var marineLogistics = document.querySelector('.nav-link.current');
-                marineLogistics.style.color = "#293037"
+                marineLogistics.style.color = "#293037";
+                element.style.color = '#FF6D00'
                 underline.style.width = '130px';
-                underline.style.background = '#060454';
+                underline.style.background = '#FF6D00';
             }
             // Disable underlines for other links except the hovered link
             var otherLinks = document.querySelectorAll('.nav-link');
@@ -671,6 +670,7 @@
             // Enable underline for marine logistics when not hovering over any link
             var oilAndGasLink = document.querySelector('.nav-link.current');
             var oilAndGasUnderline = oilAndGasLink.querySelector('.underline');
+            oilAndGasLink.style.color = '#060454';
             oilAndGasUnderline.style.width = '115px';
         }
     </script>
