--- a/oil-and-gas.html
+++ b/oil-and-gas.html
@@ -11,6 +11,8 @@
     <link href='https://fonts.googleapis.com/css?family=Space Grotesk' rel='stylesheet'>
     <link rel="preload" as="script" href="jquery.min.js">
     <link rel="preload" as="script" href="theme.js">
+    <link rel="preload" as="image" href="public/images/banner-image1.png">
+    <link rel="preload" as="image" href="public/images/banner-image2.png">
 </head>
 
 <body>
