--- a/renewable-energy.html
+++ b/renewable-energy.html
@@ -11,6 +11,12 @@
     <link href='https://fonts.googleapis.com/css?family=Space Grotesk' rel='stylesheet'>
     <link rel="preload" as="script" href="jquery.min.js">
     <link rel="preload" as="script" href="theme.js">
+    <link rel="preload" as="image" href="public/images/renewable-energy-image.png">
+    <link rel="preload" as="image" href="public/images/small-solar.png">
+    <link rel="preload" as="image" href="public/images/solar-engineers.png">
+    <link rel="preload" as="image" href="public/images/solar-roof.png">
+    
+
 </head>
 
 <body>
