--- a/logistics.html
+++ b/logistics.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="public/images/logo1.jpg">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+    <link rel="preload" as="image" href="public/images/phone.png">
+    <link rel="preload" as="image" href="public/images/new-phone-image.png">
+    
 </head>
 
 <body>
